modern-java/src/test/java/grammer/FinalTest.java
package grammer;

import org.junit.jupiter.api.Test;

class FinalTest {

    @Test
    void finalTest() {
        final String hello = "hello world!";

//        hello = "world2";    // error
    }
}
